--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,26 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+######################
+## OS generated files #
+#######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+dist
+MANIFEST
+.idea/
+
+## Translations
+*.mo
+
+## Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
